--- a/frontend/src/app/pages/blog/blog.component.html
+++ b/frontend/src/app/pages/blog/blog.component.html
@@ -1,31 +1,13 @@
-<section class="vh-100">
-  <div class="container py-5 h-100">
-    <div class="d-flex justify-content-center align-items-center h-100">
-      <div style="max-width: 800px">
-        <div class="card m-2" style="max-width: 540px">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img
-                src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"
-                class="img-fluid rounded-start"
-              />
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">{{ blog() }}</h5>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <p class="card-text">
-                  <small class="text-muted">Last updated 3 mins ago</small>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="container py-5">
+  <div class="d-flex justify-content-center">
+    <div style="max-width: 800px">
+      <h5 class="text-center mb-5">{{ blog()?.title }}</h5>
+      <p class="text-center">
+        {{ blog()?.content }}
+      </p>
+      <p>
+        <small class="text-muted">ID: {{ blog()?.id }}</small>
+      </p>
     </div>
   </div>
-</section>
+</div>
